# UrbanAgents

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements_citybench_windows.txt  requirements_combined.txt
benchmarks/: __init__.py
case_studies/: README.md  __init__.py  ablation_config.yaml  runtime_observatory.py
case_studies/case1_heritage/: README.md  case1_plus20_input.json  data_manifest.json  experiment_protocol.md  task_input.json
case_studies/case2_walkability/: README.md
degim/alignment/: cross_layer.py
degim/data/: agent_simulator.py
degim/engine/: degim_engine.py
degim/layers/: l1_cognitive.py  l2_spatial.py  l3_imagery.py
degim/utils/: llm_utils.py  spatial_tools.py
docs/: AGENT_ITERATION_ARCHITECTURE_PLAN.md  AGENT_SYSTEM_DESIGN.md  CITYBENCH_EMBODIED_METRICS.md  CITYBENCH_RUNBOOK.md  COLLABORATOR_CASE2_QUICKSTART.md  CUBEGRAPH_EXPERIMENTAL_RETRIEVER.md  HERMES_CLI_RUNTIME_CHANGESET.md  HERMES_RUNTIME_UPGRADE.md  LITERATURE_REVIEW.md  RELEASE_CHECKLIST.md  RHINO_GRASSHOPPER_CONNECTOR_SETUP.md  URBANAGENT_BENCHMARK_STANDARD.md  benchmark_reconciliation.md  framework.md  gis_tool_extension_architecture.md  tool_inventory.md  urbanworkflowbench_dimension_task_bank_v1.md  urbanworkflowbench_pilot40_inventory.md
docs/diagrams/: urban_agent_memory_flow.drawio
docs/plans/: 2026-02-28-skills-test-demo.md  iterative_test_plan.json
examples/: __init__.py  case2_urban_vitality_input.example.json  rdma_style_demo.py
experimental/: __init__.py  cube_retriever.py
experiments/: gis_backend_adaptation_note_20260519.md
experiments/case2_process_materials_rerun_20260527_020009/: frontend_attachment_repair_report.md  route_tree_events.jsonl  route_tree_frontend_state.json  route_tree_state.json  route_tree_visual_spec.json  semantic_repair_report.md  urban_host_python_20260527_030819_899470.py  urban_host_python_20260527_031035_225405.py
experiments/case2_tester_package/: .gitignore  AGENT_TESTER_OPERATOR_GUIDE.md  ARCGIS_PRO_SUPPORT.md  CASE2_TESTER_HANDBOOK.md  COLLABORATOR_REALISTIC_TEST_README.md  DIALOGUE_SCRIPT.md  INSTALL.md  INSTALL_LATEST_URBAN_HERMES.md  KIMI_CODE_API_SETUP.md  README.md  (+2 more)
figures/: dual_space_cognition_diagram_drawio_v2.drawio  human_ai_interaction_workflow_drawio_v2.drawio  urbanagent_framework_flow_drawio_v2.drawio  urbanagent_memory_strategy_drawio_v1.drawio  urbanagent_tool_interoperability_drawio_v2.drawio
hermes_urban_agent/: .gitignore  README.md
legacy/: __init__.py
paper_draft/: ASCII_FRAMEWORK_ARCHIVE.md  CEUS_citation_gap_and_30_refs.md  FIGURE_STRATEGY.md  FILE_MAPPING_AND_NOTES.md  IMPROVEMENT_SUGGESTIONS.md  UrbanAgent_CEUS_Draft.docx  UrbanAgent_CEUS_Draft.md  UrbanAgent_CEUS_Draft.odt
plugins/: __init__.py
scripts/: build_case1_paper_figures.py  build_case1_rdma_panels.py  build_case2_canonical_process_figures_20260527.py  build_rdma_style_figures.py  install.ps1  install.sh  package_case1_qgis_workspace.py  package_case2_collaborator_release.py  qgis_live_bridge.py  run_ablation.py  run_case1_plus20_experiment.py  run_gis_backend_protocol_smoke.py  start_urban_agent_workspace.py
tests/: test_alignment_extensions.py  test_capabilities.py  test_cli.py  test_deepseek_client.py  test_design_modules.py  test_evidence_memory_pipeline.py  test_feedback_memory.py  test_geo_tools_context_buffer.py  test_grounding_runtime.py  test_hermes_runtime_upgrade.py  test_hermes_urban_memory_provider.py  test_major_revision.py  test_memory_module.py  test_public_api.py  test_review_hub.py  test_runtime_observatory.py  test_task_agent.py  test_urban_hermes_route_tree_state.py
urban_agent/: README.md  __init__.py  __main__.py  capabilities.py  cli.py  cli_multiturn.py  cognition.py  config.py  config_store.py  constants.py  core.py  feedback_memory.py  governance.py  grounding.py  legacy_agent.py  mcp_server.py  mcp_tools.py  memory_store.py  research_memory.py  runtime_observatory.py  task_agent.py  version.py  visualization.py
web/: README.md  __init__.py  app.py  requirements.txt
(+766 files in other folders)
