[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urban-agent"
version = "0.1.0"
description = "An open framework for LLM-orchestrated urban spatial analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "UrbanAgent Contributors"}
]
keywords = ["urban-analysis", "geospatial", "llm-agent", "openstreetmap", "citybench"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
  "fastapi>=0.115.0",
  "geopandas>=0.14.0",
  "networkx>=3.2.0",
  "numpy>=1.26.0",
  "openai>=1.52.2",
  "pandas>=2.1.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "python-dotenv>=1.0.1",
  "scikit-learn>=1.5.0",
  "shapely>=2.0.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
]
vision = [
  "pillow>=10.4.0",
  "rasterio>=1.3.9",
]

[project.urls]
Homepage = "https://github.com/your-org/urban-agent"
Documentation = "https://github.com/your-org/urban-agent/tree/main/paper4_urban_svgagent/docs"
Issues = "https://github.com/your-org/urban-agent/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["urban_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"