[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urban-hermes"
version = "0.2.0"
description = "Urban-Hermes runtime for reviewable urban-analysis workflows"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "UrbanAgent Contributors"}
]
keywords = ["urban-analysis", "geospatial", "llm-agent", "openstreetmap"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
  "croniter>=6.0.0",
  "fastapi>=0.115.0",
  "fire>=0.7.1",
  "geopandas>=0.14.0",
  "httpx[socks]>=0.28.1",
  "jinja2>=3.1.6",
  "networkx>=3.2.0",
  "numpy>=1.26.0",
  "openai>=2.24.0",
  "osmnx>=1.9.4",
  "pandas>=2.1.0",
  "pillow>=10.4.0",
  "psutil>=7.2.2",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "prompt-toolkit>=3.0.48",
  "PyJWT[crypto]>=2.12.1",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.3",
  "requests>=2.33.0",
  "rich>=13.9.0",
  "ruamel.yaml>=0.18.17",
  "scikit-learn>=1.5.0",
  "shapely>=2.0.0",
  "tenacity>=9.1.4",
  "tzdata>=2025.3; sys_platform == 'win32'",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
]
vision = [
  "matplotlib>=3.8.0",
  "rasterio>=1.3.9",
]

[project.urls]
Homepage = "https://github.com/xuanniao57/UrbanAgents"
Documentation = "https://github.com/xuanniao57/UrbanAgents/tree/main/docs"
Issues = "https://github.com/xuanniao57/UrbanAgents/issues"

[project.scripts]
urban-hermes = "urban_hermes.launcher:main"
urban-agent = "urban_hermes.launcher:main"
urban-hermes-dogfood = "urban_hermes.dogfood:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["hermes_urban_agent"]
include = ["urban_hermes*"]
exclude = ["legacy*", "plugins*", "benchmarks*", "case_studies*", "examples*", "experimental*"]

[tool.setuptools.package-data]
urban_hermes = ["research_memory_seed.json", "urban_skill_prompt.md", "_vendor/hermes_runtime/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
